Fix layout issues and improve visual styling

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -52,9 +52,10 @@ header {
     width: 100%;
     height: auto;
     display: flex;
+    top: 0;
     align-items: center;
     justify-content: space-between;
-    padding: 8px;
+    padding: 10px;
     position: fixed;
     z-index: 1000;
     font-family: var(--cursive-font-family);
@@ -74,7 +75,6 @@ header {
 /*Nav Section*/
 .nav-container {
     width: auto;
-    background-color: yellow;
     height: 100%;
     display: flex;
     align-items: center;
@@ -190,6 +190,7 @@ header {
     justify-content: center;
     will-change: transform;
     position: relative;
+    overflow: hidden;
 }
 
 .about-title {
@@ -226,7 +227,7 @@ header {
 /*Timeline Section*/
 .timeline-container {
     width: 100%;
-    min-height: 100vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -278,7 +279,7 @@ header {
 }
 
 .checkpoint {
-    width: 50%;
+    width: 55%;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -311,6 +312,7 @@ header {
     font-size: 1rem;
     font-family: var(--bold-font-family);
     color: var(--secundary-text-color);
+    will-change: clip-path;
 }
 
 .timeline-description span {
@@ -371,7 +373,7 @@ header {
 }
 
 .tour-items {
-    width: 33%;
+    min-width: 33%;
     height: 200px;
     font-family: var(--bold-font-family);
     position: relative;
